Bug 406127 - Unable to delete tasks
Summary: Unable to delete tasks
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: usability (other bugs)
Version First Reported In: 2.9.7
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-01 22:37 UTC by Andy Lavarre
Modified: 2019-04-05 09:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.89
Sentry Crash Report:


Attachments
attachment-19856-0.html (2.07 KB, text/html)
2019-04-02 12:45 UTC, Andy Lavarre
Details
attachment-16955-0.html (1.01 KB, text/html)
2019-04-03 12:36 UTC, Andy Lavarre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andy Lavarre 2019-04-01 22:37:39 UTC
SUMMARY
The toolbar delete button and <Edit><Delete (Del> are greyed out.

STEPS TO REPRODUCE
1. Try to delete a task 

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
The task should be deleted


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
    Linux Mint 18.3
KDE Plasma Version: 
    5.8.9
KDE Frameworks Version: 
    5.36.0
Qt Version: 
    5.6.1
ADDITIONAL INFORMATION
I tried upgrading PLAN. Software manager does not offer newer than 2.9.7.

Other sources offer 3.1.0 as tar.gz but the installation is far too complicated.

I need to be able to delete tasks.

Thanks in advance.

C. Andrews Lavarre
alavarre@gmail.com
P.O. Box 606
Newport, RI USA
02840-0006
+1 (401) 339-7189
Comment 1 Dag Andersen 2019-04-02 06:13:02 UTC
Have you baselined your project? (Then you are not allowed to *delete* tasks)
If that is not the case, is it possible for you to attach the project file?
Comment 2 Andy Lavarre 2019-04-02 12:45:03 UTC
Created attachment 119209 [details]
attachment-19856-0.html

On Tue, 2019-04-02 at 06:13 +0000, Dag Andersen wrote:
> https://bugs.kde.org/show_bug.cgi?id=406127
> 
> --- Comment #1 from Dag Andersen <danders@get2net.dk> ---
> Have you baselined your project? (Then you are not allowed to
> *delete* tasks)
> If that is not the case, is it possible for you to attach the project
> file?
> 
Dag good morning.
Thank you:
I *had* baselined it, but then added new tasksː
    After your reply I checked the     Schedule    , it said     Baselined    . So I
    clicked     Baseline     again. A popup says "This project is baselined. Do
    you want to remove the baseline?"
    I replied yes. Then I could delete the undesired task.

    I then clicked     Calculate     and     Baseline     again, so now all is well.

Is there an IRC channel or forum where I can get answers to questions
about Plan? I like it a lot, but (obviously) have a learning curve.
Learning by trial and error is very difficult... :-(
    For example, I've learnt that the only way to get a readable PDF
    output of Tasks is to use A0 paper size. Status requires A3 page
    size...     ɑmericans of course know very little about ɪSO. (ɪ do
    because ɪˈve spent a lot of time in ɛʊ plus am an eŋineer... ː-)

    It would be nice if it could be exported to CSV, I now use Okular
    Table Selection, but it is a bit Kludgy... Etc., etc., etc.

    Google only helps a little bit. So it would be nice to have a direct
    forum or source...

Thank you again. We can delete this bug report.
Kinnd regards, ɑndy
Comment 3 Dag Andersen 2019-04-03 12:20:53 UTC
Ok, it's a bug then. You should have been able to delete tasks that is not part of the baselined schedule.

We use the calligra forum:
https://forum.kde.org/viewforum.php?f=203
See also https://calligra.org
Comment 4 Andy Lavarre 2019-04-03 12:36:32 UTC
Created attachment 119224 [details]
attachment-16955-0.html

Thank you again.
On Wed, 2019-04-03 at 12:20 +0000, Dag Andersen wrote:
> https://bugs.kde.org/show_bug.cgi?id=406127
> 
> Dag Andersen <danders@get2net.dk> changed:
> 
>            What    |Removed                     |Added
> -------------------------------------------------------------------
> ---------
>              Status|REPORTED                    |CONFIRMED
>      Ever confirmed|0                           |1
> 
> --- Comment #3 from Dag Andersen <danders@get2net.dk> ---
> Ok, it's a bug then. You should have been able to delete tasks that
> is not part
> of the baselined schedule.
> 
> We use the calligra forum:
> https://forum.kde.org/viewforum.php?f=203
> See also https://calligra.org
>
Comment 5 Dag Andersen 2019-04-05 09:08:00 UTC
Git commit 46b858dd68ed9f2fb6132f6f128fcf9ec6e33f41 by Dag Andersen.
Committed on 05/04/2019 at 06:14.
Pushed by danders into branch 'master'.

TaskEditor: Enable Delete action also when *one* task is selected and a different task is current task

To provoke:
Select a task: Delete action is enabled
Use keybord (Ctrl-Arrow) to move to different task: Delete action is disabled
FIXED-IN: 3.1.89

M  +0    -16   src/libs/ui/kpttaskeditor.cpp

https://commits.kde.org/calligraplan/46b858dd68ed9f2fb6132f6f128fcf9ec6e33f41