TaskEditor: Enable Delete action also when *one* task is selected and a different task is current task

To provoke:
Select a task: Delete action is enabled
Use keybord (Ctrl-Arrow) to move to different task: Delete action is disabled

BUG: 406127
FIXED-IN: 3.1.89